--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: ipad.png
 category: Services
-title: Death to the Stock Photo:<br>Special Thanks
+title: VMware vRealize Automation/Orchestrator
 description: |
 ---
-  A special thanks to [Death to the Stock Photo](http://join.deathtothestockphoto.com/) for providing the photographs that you see in this template.  Visit their website to become a member!
+  I have been using vRealize Automation and Orchestration along with CI tools such as chef integrating into the private and public clouds to break down the walls between operations and development. Automating operations processes into one easy to use format reduces errors and creates repeatable senarios that speeds up time to delivery.
