--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-img: dog.png
+img: mouse.png
 category: Services
-title: 3D Device Mockups<br>by PSDCovers
+title: VMware vSphere
 description: |
 ---
   Turn your 2D designs into high quality, 3D
