--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: mouse.png
 category: Services
-title: VMware vSphere
+title: VMware vSphere/Virtualization
 description: |
 ---
   Turn your 2D designs into high quality, 3D
